--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react-dom": "^16.9.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.1",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.2",
+    "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
